--- a/MortalityOrg.ipynb
+++ b/MortalityOrg.ipynb
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1607,7 @@
        "4         0         0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1778,7 +1778,7 @@
        "4  1235.0  0.000123  0.000907  0.007307  0.026289  0.114782  0.005354  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1791,32 +1791,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-40-8c4efd3befed>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Make Index CountryCode\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mmortality_data_country_indexed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmortality_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmortality_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'CountryCode'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mmortality_data_country_indexed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mmortality_data_country_indexed\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3938\u001b[0m                                            \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3939\u001b[0m                                            \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3940\u001b[1;33m                                            errors=errors)\n\u001b[0m\u001b[0;32m   3941\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3942\u001b[0m     @rewrite_axis_style_signature('mapper', [('copy', True),\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3778\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3779\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3780\u001b[1;33m                 \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3781\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3782\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[1;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[0;32m   3827\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m~\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3828\u001b[0m                 \u001b[1;31m# Check if label doesn't exist along axis\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3829\u001b[1;33m                 \u001b[0mlabels_missing\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_indexer_for\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3830\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'raise'\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mlabels_missing\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3831\u001b[0m                     \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{} not found in axis'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_indexer_for\u001b[1;34m(self, target, **kwargs)\u001b[0m\n\u001b[0;32m   4454\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_unique\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4455\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4456\u001b[1;33m         \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_indexer_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4457\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4458\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\envs\\pyvizenv\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_indexer_non_unique\u001b[1;34m(self, target)\u001b[0m\n\u001b[0;32m   4442\u001b[0m             \u001b[0mtgt_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_ndarray_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4443\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4444\u001b[1;33m         \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmissing\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_indexer_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtgt_values\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4445\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mensure_platform_int\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmissing\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4446\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_indexer_non_unique\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Week</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>D0_14</th>\n",
+       "      <th>D15_64</th>\n",
+       "      <th>D65_74</th>\n",
+       "      <th>D75_84</th>\n",
+       "      <th>D85p</th>\n",
+       "      <th>DTotal</th>\n",
+       "      <th>R0_14</th>\n",
+       "      <th>R15_64</th>\n",
+       "      <th>R65_74</th>\n",
+       "      <th>R75_84</th>\n",
+       "      <th>R85p</th>\n",
+       "      <th>RTotal</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CountryCode</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AUS2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>m</td>\n",
+       "      <td>5.800872</td>\n",
+       "      <td>202.199128</td>\n",
+       "      <td>206.0</td>\n",
+       "      <td>382.0</td>\n",
+       "      <td>393.0</td>\n",
+       "      <td>1189.0</td>\n",
+       "      <td>0.000130</td>\n",
+       "      <td>0.001337</td>\n",
+       "      <td>0.010821</td>\n",
+       "      <td>0.040008</td>\n",
+       "      <td>0.118851</td>\n",
+       "      <td>0.005225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUS2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>f</td>\n",
+       "      <td>6.758007</td>\n",
+       "      <td>145.241993</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>299.0</td>\n",
+       "      <td>670.0</td>\n",
+       "      <td>1282.0</td>\n",
+       "      <td>0.000160</td>\n",
+       "      <td>0.000955</td>\n",
+       "      <td>0.008226</td>\n",
+       "      <td>0.026646</td>\n",
+       "      <td>0.117591</td>\n",
+       "      <td>0.005558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUS2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "      <td>12.558879</td>\n",
+       "      <td>347.441121</td>\n",
+       "      <td>367.0</td>\n",
+       "      <td>681.0</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>2471.0</td>\n",
+       "      <td>0.000145</td>\n",
+       "      <td>0.001146</td>\n",
+       "      <td>0.009506</td>\n",
+       "      <td>0.032789</td>\n",
+       "      <td>0.118053</td>\n",
+       "      <td>0.005393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUS2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>m</td>\n",
+       "      <td>3.205745</td>\n",
+       "      <td>155.794255</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>337.0</td>\n",
+       "      <td>401.0</td>\n",
+       "      <td>1092.0</td>\n",
+       "      <td>0.000072</td>\n",
+       "      <td>0.001030</td>\n",
+       "      <td>0.010243</td>\n",
+       "      <td>0.035295</td>\n",
+       "      <td>0.121270</td>\n",
+       "      <td>0.004799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AUS2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>f</td>\n",
+       "      <td>5.181139</td>\n",
+       "      <td>137.818861</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>654.0</td>\n",
+       "      <td>1235.0</td>\n",
+       "      <td>0.000123</td>\n",
+       "      <td>0.000907</td>\n",
+       "      <td>0.007307</td>\n",
+       "      <td>0.026289</td>\n",
+       "      <td>0.114782</td>\n",
+       "      <td>0.005354</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Year  Week Sex      D0_14      D15_64  D65_74  D75_84    D85p  \\\n",
+       "CountryCode                                                                  \n",
+       "AUS2         2015     1   m   5.800872  202.199128   206.0   382.0   393.0   \n",
+       "AUS2         2015     1   f   6.758007  145.241993   161.0   299.0   670.0   \n",
+       "AUS2         2015     1   b  12.558879  347.441121   367.0   681.0  1063.0   \n",
+       "AUS2         2015     2   m   3.205745  155.794255   195.0   337.0   401.0   \n",
+       "AUS2         2015     2   f   5.181139  137.818861   143.0   295.0   654.0   \n",
+       "\n",
+       "             DTotal     R0_14    R15_64    R65_74    R75_84      R85p  \\\n",
+       "CountryCode                                                             \n",
+       "AUS2         1189.0  0.000130  0.001337  0.010821  0.040008  0.118851   \n",
+       "AUS2         1282.0  0.000160  0.000955  0.008226  0.026646  0.117591   \n",
+       "AUS2         2471.0  0.000145  0.001146  0.009506  0.032789  0.118053   \n",
+       "AUS2         1092.0  0.000072  0.001030  0.010243  0.035295  0.121270   \n",
+       "AUS2         1235.0  0.000123  0.000907  0.007307  0.026289  0.114782   \n",
+       "\n",
+       "               RTotal  \n",
+       "CountryCode            \n",
+       "AUS2         0.005225  \n",
+       "AUS2         0.005558  \n",
+       "AUS2         0.005393  \n",
+       "AUS2         0.004799  \n",
+       "AUS2         0.005354  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set Index as Country Code\n",
+    "mortality_data_country_indexed = mortality_data.set_index(mortality_data['CountryCode'])\n",
+    "mortality_data_country_indexed.drop(columns=['CountryCode'], inplace=True)\n",
+    "#mortality_data_country_indexed.drop(1, inplace = True)\n",
+    "mortality_data_country_indexed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['AUS2' 'AUT' 'BEL' 'BGR' 'CAN' 'CHE' 'CHL' 'CZE' 'DEUTNP' 'DNK' 'ESP'\n",
+      " 'EST' 'FIN' 'FRATNP' 'GBRTENW' 'GBR_NIR' 'GBR_SCO' 'GRC' 'HRV' 'HUN'\n",
+      " 'ISL' 'ISR' 'ITA' 'KOR' 'LTU' 'LUX' 'LVA' 'NLD' 'NOR' 'NZL_NP' 'POL'\n",
+      " 'PRT' 'RUS' 'SVK' 'SVN' 'SWE' 'TWN' 'USA']\n"
      ]
     }
    ],
    "source": [
-    "# Make Index CountryCode\n",
-    "mortality_data_country_indexed = mortality_data.set_index(mortality_data['CountryCode'])\n",
-    "mortality_data_country_indexed.drop(1, inplace = True)\n",
-    "mortality_data_country_indexed.head()"
+    "# List Unique Country Codes\n",
+    "country_codes = mortality_data['CountryCode'].unique()\n",
+    "print(country_codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AUS2': 'Australia',\n",
+       " 'AUT': 'Austria',\n",
+       " 'BEL': 'Belgium',\n",
+       " 'BGR': 'Bulgaria',\n",
+       " 'CAN': 'Canada',\n",
+       " 'CHE': 'Switzerland',\n",
+       " 'CHL': 'Chile',\n",
+       " 'CZE': 'Czech Republic',\n",
+       " 'DEUTNP': 'Germany',\n",
+       " 'DNK': 'Denmark',\n",
+       " 'ESP': 'Spain',\n",
+       " 'EST': 'Estonia',\n",
+       " 'FIN': 'Finland',\n",
+       " 'FRATNP': 'France',\n",
+       " 'GBRTENW': 'England and Wales',\n",
+       " 'GBR_NIR': 'Northern Ireland',\n",
+       " 'GBR_SCO': 'Scotland',\n",
+       " 'GRC': 'Greece',\n",
+       " 'HRV': 'Croatia',\n",
+       " 'HUN': 'Hungary',\n",
+       " 'ISL': 'Iceland',\n",
+       " 'ISR': 'Israel',\n",
+       " 'ITA': 'Italy',\n",
+       " 'KOR': 'South Korea',\n",
+       " 'LTU': 'Lithuania',\n",
+       " 'LUX': 'Luxembourg',\n",
+       " 'LVA': 'Latvia',\n",
+       " 'NLD': 'Netherlands',\n",
+       " 'NOR': 'Norway',\n",
+       " 'NZL_NP': 'New Zealand',\n",
+       " 'POL': 'Poland',\n",
+       " 'PRT': 'Portugal',\n",
+       " 'RUS': 'Russia',\n",
+       " 'SVK': 'Slovakia',\n",
+       " 'SVN': 'Slovenia',\n",
+       " 'SWE': 'Sweden',\n",
+       " 'TWN': 'Taiwan',\n",
+       " 'USA': 'USA'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create Country Dictionary\n",
+    "country_dict = dict(zip(country_codes, ['Australia', 'Austria', 'Belgium', 'Bulgaria', 'Canada', 'Switzerland', 'Chile', 'Czech Republic', 'Germany', 'Denmark',\n",
+    "                                        'Spain', 'Estonia', 'Finland', 'France', 'England and Wales', 'Northern Ireland', 'Scotland', 'Greece', \n",
+    "                                        'Croatia', 'Hungary', 'Iceland', 'Israel', 'Italy', 'South Korea', 'Lithuania', 'Luxembourg', 'Latvia', \n",
+    "                                        'Netherlands', 'Norway', 'New Zealand', 'Poland', 'Portugal', 'Russia', 'Slovakia', 'Slovenia', 'Sweden', 'Taiwan', 'USA']))\n",
+    "\n",
+    "country_dict"
    ]
   },
   {
