--- a/Jesus/MortalityOrg.ipynb
+++ b/Jesus/MortalityOrg.ipynb
@@ -2268,9 +2268,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyvizenv] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pyvizenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
