--- a/MortalityOrg.ipynb
+++ b/MortalityOrg.ipynb
@@ -2260,6 +2260,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pnw' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-53609d32602b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m pnw.RadioButtonGroup(name='Sex', value='b', \n\u001b[0m\u001b[0;32m      2\u001b[0m                                  options=list(data['Sex'].unique))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pnw' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "pnw.RadioButtonGroup(name='Sex', value='b', \n",
+    "                                 options=list(data['Sex'].unique))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -2268,9 +2290,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pyvizenv] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-pyvizenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
